--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,76 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .grid1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .grid3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .grid4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .grid5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .grid6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+  .grid7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+  .grid8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+  .grid9 {
+    grid-template-columns: repeat(9, minmax(0, 1fr));
+  }
+  .grid10 {
+    grid-template-columns: repeat(10, minmax(0, 1fr));
+  }
+  .grid11 {
+    grid-template-columns: repeat(11, minmax(0, 1fr));
+  }
+  .grid12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+  .grid13 {
+    grid-template-columns: repeat(13, minmax(0, 1fr));
+  }
+  .grid14 {
+    grid-template-columns: repeat(14, minmax(0, 1fr));
+  }
+  .grid15 {
+    grid-template-columns: repeat(15, minmax(0, 1fr));
+  }
+  .grid16 {
+    grid-template-columns: repeat(16, minmax(0, 1fr));
+  }
+  .grid17 {
+    grid-template-columns: repeat(17, minmax(0, 1fr));
+  }
+  .grid18 {
+    grid-template-columns: repeat(18, minmax(0, 1fr));
+  }
+  .grid19 {
+    grid-template-columns: repeat(19, minmax(0, 1fr));
+  }
+  .grid20 {
+    grid-template-columns: repeat(20, minmax(0, 1fr));
+  }
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -99,9 +166,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-@media (prefers-color-scheme: dark) {
+ */
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
